--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,14 @@ version = "0.1.0"
 authors = ["Javier Pollak <javi.po.123@gmail.com>"]
 
 [dependencies]
-jack = "0.5.3"
+jack = { git = "https://github.com/Javyre/rust-jack.git" }
+# jack = { path = "../Rust-jack" }
 slog = "2.0.12"
 slog-term = "2.2.0"
 slog-async = "2.1.0"
 sloggers = "0.2.1"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
 # log = "0.3"
 # env_logger = "0.3"
